--- a/themes/daria-day/sass/components/_front-flickity.scss
+++ b/themes/daria-day/sass/components/_front-flickity.scss
@@ -5,7 +5,7 @@ Front Carousel Styling
 */
 
 .front-carousel {
-  margin: $base-spacing * 5 auto;
+  margin: $base-spacing * 5 auto $base-spacing * 8;
 
   .front-carousel-label {
     display: flex;
