--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -75,7 +75,8 @@ sass/
 @import 'layout/footer';
 @import 'layout/about';
 @import 'layout/front-latest';
-@import 'layout/front-video';  
+@import 'layout/front-video';
+@import 'layout/social-media-and-mailchimp';
 
 //Pages
 @import 'pages/about-us';
