--- a/themes/daria-day/sass/layout/_footer.scss
+++ b/themes/daria-day/sass/layout/_footer.scss
@@ -1,111 +1,120 @@
+/* 
+=========================
+Footer
+=========================
+*/
+
 .footer {
-  background-color: #062B35;
- 
-  .companyinfo {
-    display: grid;
-    grid-auto-rows: minmax(125px, auto);
-    justify-items: center;
-  }
-
-  .companyinfo.logocontainer {
-    display: grid;
-    grid-auto-rows: minmax(125px, auto);
-    justify-items: center;
-    text-align: center;  
-  }
-
-  .logocontainer, .textwidget {
-    text-align: center;
-  }
-
-  .companyinfo > .sitecontent {
-    text-align: center;
-  }
-
-  .companyinfo > div {
-    font-size: 1.3em;
-  }
-
-  .contact {
-    box-sizing:content-box;
-  }
+  
+  padding: $base-spacing;
+  padding-bottom: $base-spacing * 5;
+  
+  background-color: $brand-colour-evergreen;
+  line-height: 1em;
+  text-align: center;
   
   h3 {
-    color:white;
-    font-family: Avenir;
-    font-size: 1.2em;
+    font-family: 'Avenir LT Book', sans-serif;
+
+    color: white;
   }
 
   a {
-    text-decoration: none ;
-    color: white;
-    font-family: Avenir;
-    font-weight: 100;
-    font-size: .8em;      
-  }
-
-  .subscription .subscription-sub-title {  
-    font-size: 1em;
-  }
-
-  .subscription-sub-title, .subscription-title {
-    color: white;  
-  }
-
-  .social-media .social-media-title {
     color: white;
   }
 
-  span.active {
-    display: none;
-  }
-}
-.footer img.darialogo {
-  max-height: 300px;
-  max-width: 300px;
-  margin-bottom: -20%;
-  margin-top: -20%;
-}
-
-
-.footer img.darialogo {
-  max-height: 300px;
-  max-width: 300px;
-  margin-bottom: -20%;
-  margin-top: -20%;
-}
-
-.social-media .social-media-icons img {
-  padding: 1px 2px;
-}
-
-@media screen and (min-width: 1024px) {
-  .logocontainer {
-    width: 100%;
-    justify-content: center;
-    display: flex;
-  }
-  
-  .contact {
-    margin-top: 10%;
-    margin-bottom: 10%;
-  }
-
-  .companyinfo > div {
-    text-align: center;
-    margin-top: 35%;
-  } 
-}
-
-@media screen and (min-width: 600px) {
   .companyinfo {
-    justify-items: none;
     display: grid;
-    grid-template-columns: repeat(4, 2fr);
+    justify-items: center;
+
+    > div {
+      margin: $base-spacing auto;
+    }
   }
 
-  .companyinfo > div {
-    margin-top: 35%;
-    font-size: 1.3em;
+  .logocontainer {
+    margin: -$base-spacing * 6 auto;
+  }
+}
+
+@media screen and (min-width: $tablet) {
+  .footer {
+    padding: $base-spacing * 2;
+    padding-bottom: $base-spacing * 5;
+
+    .companyinfo {
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-areas: 
+        "products connect"
+        "company connect"
+        "customer connect";
+
+      .products {
+        grid-area: products;
+      }
+
+      .company {
+        grid-area: company;
+      }
+
+      .customer {
+        grid-area: customer;
+      }
+
+      .contact {
+        grid-area: connect;
+
+        > div {
+          margin: $base-spacing * 2 auto;
+        }
+
+        .logocontainer {
+          margin: -$base-spacing * 6 auto;
+        }
+      }
+    }
+  }
+}
+
+
+    
+@media screen and (min-width: $larger-tablet) {
+  .footer {
+    padding: $base-spacing * 3;
+
+    .companyinfo {
+      grid-template-columns: 2fr 2fr 2fr 3fr;
+      grid-template-areas: initial;
+      grid-template-areas: 
+        "products company customer connect";
+
+      > div {
+        margin: 30% auto;
+      }
+
+      .products {
+        grid-area: products;
+      }
+
+      .company {
+        grid-area: company;
+      }
+
+      .customer {
+        grid-area: customer;
+      }
+
+      .contact {
+        grid-area: connect;
+
+        > div {
+          margin: 0;
+        }
+
+        .logocontainer {
+          margin: -$base-spacing * 9 auto;
+        }
+      }
+    }
   }
 }
