added instagram feed, cleaned up some front-page styling

--- a/themes/daria-day/sass/_hero.scss
+++ b/themes/daria-day/sass/_hero.scss
@@ -27,7 +27,7 @@
 
   .hero-title {
     h1 {
-      font-family: 'Playfair Display';
+      font-family: 'Playfair Display Bold';
       font-size: 1.6em;
       font-weight: bold;
       text-align: center;
