--- a/themes/daria-day/sass/pages/_about-us.scss
+++ b/themes/daria-day/sass/pages/_about-us.scss
@@ -9,7 +9,7 @@
         transform: translate(-50%, -50%);
         color: white;
         font-size: 1.5em;
-        font-family: Playfair Display;
+        font-family: 'Playfair Display', serif;
         }  
     }
     .aboutcopy, .artisanscopy {
@@ -31,7 +31,7 @@
                 transform: translate(-50%, -50%);
                 color: green;
                 font-size: 1.5em;
-                font-family: Playfair Display;
+                font-family: 'Playfair Display', serif;
                 }  
             }
             .k2{
