--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -77,6 +77,7 @@ sass/
 @import 'layout/front-latest';
 @import 'layout/front-video';
 @import 'layout/social-media-and-mailchimp';
+@import 'layout/instagram';
 
 //Pages
 @import 'pages/about-us';
@@ -109,7 +110,7 @@ body {
 }
 
 h1.page-title {
-  font-family: 'Playfair Display';
+  font-family: 'Playfair Display Bold', serif;
   padding: 20px 40px;
   color: #062b35;
 }
