finished restyling of about-us page

--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -66,14 +66,11 @@ sass/
 
 // Components
 @import 'components/front-flickity';
-// @import 'components/flickity';
 
-// @import 'components/slider';
-// @import 'components/filter';
 // Layout
 @import 'layout/header';
 @import 'layout/footer';
-@import 'layout/about';
+@import 'layout/our-story';
 @import 'layout/front-latest';
 @import 'layout/front-video';
 @import 'layout/social-media-and-mailchimp';
