--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -1187,9 +1187,17 @@ Instagram Styling
   .instagram .instagram-title {
     font-size: 1.5em; } }
 
+/*
+=========================
+About page Styling
+=========================
+*/
 .heroimage {
   position: relative;
-  text-align: center; }
+  text-align: center;
+  min-height: 60vh;
+  -o-object-fit: cover;
+     object-fit: cover; }
   .heroimage .herocopy {
     position: absolute;
     width: 100%;
@@ -1198,8 +1206,9 @@ Instagram Styling
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     color: white;
-    font-size: 1.5em;
     font-family: 'Playfair Display', serif; }
+    .heroimage .herocopy h1 {
+      line-height: 1.5em; }
 
 .aboutcopy, .artisanscopy {
   padding: 5%; }
@@ -1225,36 +1234,11 @@ Instagram Styling
 .k2 {
   width: 100%; }
 
-.quote-title {
-  font-size: 2em;
-  margin: 7%;
-  text-align: center; }
-
-.quote-body {
-  margin-top: 3%;
-  margin-left: 7%;
-  font-size: 1.6em;
-  text-align: center;
-  margin-right: 7%; }
-
-.quote-author {
-  font-size: 1em;
-  text-align: center; }
-
-.bgimg > img {
-  min-width: 100%; }
-
-.flickity-button {
-  height: 20px;
-  width: 20px; }
-
 @media screen and (min-width: 600px) {
   .aboutcopy h3 {
     font-size: 3em; }
   .aboutcopy p {
     font-size: 1.4em; }
-  .heroimage .herocopy p {
-    font-size: 2em; }
   .artisans .artisanscopy h3 {
     font-size: 3em;
     text-align: left;
@@ -1277,15 +1261,15 @@ Instagram Styling
     .artisansimage .art {
       size: 20%; } }
 
+@media screen and (min-width: 850px) {
+  .herocopy h1 {
+    font-size: 3em; } }
+
 @media screen and (min-width: 1024px) {
-  .heroimage .herocopy {
-    font-size: 4em; }
-    .heroimage .herocopy .header {
-      font-size: 1em; }
   .about, .artisans {
     display: grid;
     width: 100%;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(2, 1fr);
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -1298,29 +1282,47 @@ Instagram Styling
             order: -1; }
   .photolinks {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 5%;
     padding-top: 3%; }
   .bgimg > img {
-    min-width: 100%; }
-  .quote-title {
-    font-size: 2em;
-    margin: 7%;
+    min-width: 100%; } }
+
+/*
+=========================
+Slider Styling
+=========================
+*/
+.carousel {
+  padding-bottom: 30px;
+  background-color: #269a65;
+  color: white; }
+  .carousel h4 {
+    margin-top: 0;
+    font-size: 1.5em;
+    font-weight: normal;
+    line-height: 1.5em; }
+  .carousel .quote-body {
+    margin-bottom: 0;
+    font-style: italic; }
+  .carousel .quote-author {
+    margin: 0;
+    font-weight: bold; }
+  .carousel .carousel-cell {
+    width: 100%;
     text-align: center; }
-  .quote-body {
-    margin-top: 3%;
-    margin-left: 7%;
-    font-size: 1.6em;
-    text-align: center;
-    margin-right: 7%; }
-  .quote-author {
-    font-size: 1em;
-    text-align: center; }
-  .information-wrapper .flickity-button {
-    height: 20px;
-    width: 20px;
-    position: relative;
-    left: 45%; } }
+    .carousel .carousel-cell .quote-container {
+      padding: 10% 20%; }
+  .carousel .flickity-page-dots {
+    bottom: 30px; }
+
+@media screen and (min-width: 600px) {
+  .carousel {
+    font-size: 1.25em; } }
+
+@media screen and (min-width: 600px) {
+  .carousel {
+    font-size: 1.4em; } }
 
 /*
 =========================
