--- a/themes/daria-day/sass/_hero.scss
+++ b/themes/daria-day/sass/_hero.scss
@@ -52,9 +52,12 @@
     background-color: $brand-colour-bright-green;
     border: none;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    color: #fff;
-    font-size: 1.25em;
-    font-family: 'Avenir LT Std';
+
+    a {
+      color: #fff;
+      font-size: 1.25em;
+      font-family: 'Avenir LT Std';
+    }
   }
 
   .hero-btn:hover{
