--- a/themes/daria-day/style.css
+++ b/themes/daria-day/style.css
@@ -444,10 +444,11 @@ body {
     background-color: #269a65;
     border: none;
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    color: #fff;
-    font-size: 1.25em;
-    font-family: 'Avenir LT Std'; }
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); }
+    .home-hero > div .hero-btn a {
+      color: #fff;
+      font-size: 1.25em;
+      font-family: 'Avenir LT Std'; }
   .home-hero > div .hero-btn:hover {
     -webkit-box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
             box-shadow: 0 4px 10px 0 rgba(255, 255, 255, 0.5), 0 6px 20px 0 rgba(255, 255, 255, 0.25);
