touched up on about-us styling, made font more consistent with zeplin

--- a/themes/daria-day/sass/pages/_shop-all.scss
+++ b/themes/daria-day/sass/pages/_shop-all.scss
@@ -324,6 +324,7 @@ Products Results Styling
 
     h3 {
       margin-bottom: $find-gemstone-base-spacing * 3;
+      font-family: 'Avenir LT Std', sans-serif;
     }
 
     p {
