--- a/themes/daria-day/sass/pages/_about-us.scss
+++ b/themes/daria-day/sass/pages/_about-us.scss
@@ -28,12 +28,30 @@ About page Styling
 }
 
 .aboutcopy, .artisanscopy {
-	padding: 5%;
+	margin-bottom: $base-spacing * 3;
 }
 	
+.information-wrapper {
+	h3 {
+		margin: 0;
+		margin-bottom: $base-spacing * 3;
+
+		font-size: 1.5em;
+		font-weight: normal;
+		text-align: center;
+	}
+
+	p {
+		margin: 0;
+	}
+}
+
 .about, .artisans{
+	box-sizing: border-box;
 	display: grid;
 	width: 100%;  
+	margin: $base-spacing * 3 auto;
+	padding: 0 $base-spacing * 1.5;
 }
 
 .bgimg{
@@ -57,39 +75,30 @@ About page Styling
 }
 
 @media screen and (min-width: $tablet) {
-	.aboutcopy {
-		h3 {
-				font-size:3em;
-		}
+	.about, .artisans {
+		margin: $base-spacing * 5 auto;
+		padding: 0 $base-spacing * 3;
+	}
 
-		p {
-				font-size:1.4em;
-			}
+	.aboutcopy, .artisanscopy {
+		font-size: 1.25em;
+		margin-bottom: $base-spacing * 5;
+
+		h3 {
+			margin-bottom: $base-spacing * 5;
 		}
+	}
 
 	.artisans {     
-		.artisanscopy{
-		
-			h3 {
-				font-size: 3em;
-				text-align: left;
-				padding-left: 4%;
-			}
+		.artisanscopy {
+	
+			a	{
+			text-decoration: underline;
 
-			p {
-				padding-left: 4%;
-				padding-right: 4%;
-				font-size: 1.5em;
-				text-align: left;
-				
-				a	{
-					text-decoration: underline;
-
-					&:hover {
-						color:green;
-						display: flex;
-						width: 100%;
-					}
+				&:hover {
+					color:green;
+					display: flex;
+					width: 100%;
 				}
 			}
 		}
@@ -103,38 +112,47 @@ About page Styling
 		}
 	}
 }
-	
+
+
 @media screen and (min-width: $larger-tablet) {
 	.herocopy {
 		h1 {
 			font-size: 3em;
 		}
 	}
-}
 
-
-@media screen and (min-width: $desktop) {
 	.about, .artisans {
+		box-sizing: border-box;
 		display: grid;
-		width: 100%;
 		grid-template-columns: repeat(2, 1fr);
 		align-items: center;
-		grid-column-gap: 5%;
+		grid-column-gap: $base-spacing * 4;
+		
+		width: 100%;
+		padding: 0 $base-spacing * 3;
+
+
+		h3 {
+			text-align: left;	
+		}
 	}
-	
-	.information-wrapper {
-		padding-top: 5%;
+
+	.aboutcopy, .artisanscopy {
 	}
 	
 	.artisansimage {
+		box-sizing: border-box;
 		order:-1;
+
+		img {
+			width: 100%;
+		}
 	}
 	
 	.photolinks {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
 		grid-column-gap: 5%;
-		padding-top: 3%;
 	}
 	
 	.bgimg > img {
