--- a/themes/daria-day/sass/style.scss
+++ b/themes/daria-day/sass/style.scss
@@ -62,7 +62,6 @@ sass/
 // Base
 @import 'base/normalize';
 @import 'base/typography';
-@import 'hero.scss';
 
 // Components
 @import 'components/front-flickity';
@@ -70,6 +69,7 @@ sass/
 // Layout
 @import 'layout/header';
 @import 'layout/footer';
+@import 'layout/front-hero.scss';
 @import 'layout/our-story';
 @import 'layout/front-latest';
 @import 'layout/front-video';
