cleaned up on some missing links and hover styles

--- a/themes/daria-day/sass/layout/_front-latest.scss
+++ b/themes/daria-day/sass/layout/_front-latest.scss
@@ -64,6 +64,12 @@ Latest Additions Section
       border-bottom: 2px solid $greyish-brown;
       color: $brand-colour-evergreen;
       text-transform: uppercase;
+
+      &:hover {
+        color: $brand-colour-green;
+        border-bottom: 2px solid $brand-colour-green;
+        cursor: pointer;
+      }
     }
   }
 }
